--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,22 @@
 @media only screen and (min-width : 767px) {
-    #dibs-complete-checkout{
+    body.dibs-enabled #dibs-complete-checkout{
         float:right !important;
         width:50% !important;
         display:inline-block !important;
     }
 
-    #order_review_heading.dibs-easy{
+    body.dibs-enabled #order_review_heading{
         float:left !important;
         clear:left !important;
         display:inline-block !important;
     }
 
-    #order_review.dibs-easy{
+    body.dibs-enabled #order_review{
         float:left !important;
         clear:left !important;
         display:inline-block !important;
     }
-    .woocommerce-additional-fields.dibs-easy{
+    body.dibs-enabled .woocommerce-additional-fields{
         float:left !important;
         width:47.8260869565% !important;
         clear:left !important;
@@ -25,10 +25,13 @@
 }
 
 @media only screen and (max-width : 767px) {
-    .dibs-easy{
+    body.dibs-enabled #order_review_heading, body.dibs-enabled #order_review, body.dibs-enabled .woocommerce-additional-fields{
         float:none !important;
         clear:both !important;
         width:100% !important;
         display:block !important;
     }
+}
+body.dibs-enabled .woocommerce-billing-fields, body.dibs-enabled .woocommerce-shipping-fields{
+    display:none;
 }
