--- a/assets/css/nets-easy-overlay.css
+++ b/assets/css/nets-easy-overlay.css
@@ -38,3 +38,8 @@
   .close-netseasy-modal:hover {
     color: darkgray;
   }
+
+/* INLINE CHECKOUT */
+.woocommerce-checkout-review-order-table:has(~ #nexi-inline-modal) {
+    margin-bottom: 0 !important;
+}
